# dynamix-manager

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: project-context.md
docs/superpowers/plans/: 2026-03-17-survey-first-implementation.md  2026-03-26-survey-html-filters-and-charts.md  2026-04-01-executive-report.md
docs/superpowers/specs/: 2026-03-17-teamdynamix-analytics-design.md  2026-03-26-survey-html-filters-and-charts.md
notebooks/: survey_health.ipynb  ticket_health.ipynb  ticket_quality.ipynb
scripts/: backfill_all_tickets.py  bootstrap_env.sh  cleanup_missing_tickets.py  refresh_all_tickets.py  update_cfo_dashboard.py
sites/cfo-dashboard/: data.json  index.html  index.js
src/dynamix_manager/: __init__.py  aha.py  cfo.py  cfo_dashboard.py  cli.py  config.py  executive.py  gmail.py  metrics.py  models.py  notebooks.py  noteplan.py  pipeline.py  planned_days_off.py  reporting.py  storage.py  surveys.py  tdx_client.py  ticket_quality.py  tickets.py  youtrack.py
tests/: test_aha.py  test_cfo.py  test_cfo_dashboard.py  test_cfo_email.py  test_cli.py  test_config.py  test_config_runtime.py  test_executive.py  test_executive_email.py  test_executive_reporting.py  test_metrics.py  test_models.py  test_notebooks.py  test_noteplan.py  test_pipeline.py  test_project_files.py  test_reporting.py  test_storage.py  test_surveys.py  test_tdx_client.py  test_ticket_metrics.py  test_ticket_notebooks.py  test_ticket_quality.py  test_ticket_quality_notebooks.py  test_ticket_quality_reporting.py  test_ticket_reporting.py  test_tickets.py
(+1 files in other folders)
