[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamix-manager"
version = "0.1.0"
description = "Phase-0 support for the TeamDynamix executive analytics workspace."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }

dependencies = [
    "duckdb",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "jupyterlab",
    "nbformat",
    "pandas",
    "plotly",
    "python-dotenv",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
dynamix-manager = "dynamix_manager.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dynamix_manager*"]
